<resources>
    <string name="app_name">RedSocialAIO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="selecciona_las_instancias_que_deseas_usar">Selecciona las instancias que deseas usar</string>
    <string name="misskey">Misskey</string>
    <string name="add_user_icon" />
    <string name="add_another_account">Add another account</string>
    <string name="sign_out">Sign out</string>
    <string name="user_name">User Name</string>
    <string name="settings">Settings</string>
    <string name="user_photo" />
</resources>